# remote-backend

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
include/: remote_control.h
src/: config_process.cpp  video_stream.cpp
